--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,66 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Ignore all bin/ and obj/ folders recursively
+**/[Bb]in/
+**/[Oo]bj/
+
+# Don't ignore solution or project files
+# (Remove these lines to keep them in Git)
+# **/*.csproj
+# **/*.sln
+
+# Ignore user-specific and IDE-related files recursively
+**/*.user
+**/*.suo
+**/*.vspx
+**/*.vsmdi
+.vs/
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+.idea/
+
+# Ignore packages, build artifacts and NuGet outputs
+packages/
+**/packages/
+**/*.nupkg
+**/artifacts/
+
+# Ignore test results
+TestResults/
+**/*.trx
+**/*.coverage
+**/*.testsettings
+
+# Ignore local DB files
+**/*.db
+**/*.sqlite
+**/*.sqlite3
+
+# Ignore design and media files
+Design/
+**/*.psd
+**/*.ai
+**/*.xd
+
+# Ignore Xamarin/MAUI/Android/iOS output files
+**/*.apk
+**/*.aab
+**/*.ipa
+**/*.dll
+**/*.pdb
+**/*.so
+**/*.jar
+**/*.dex
+
+# Ignore temp, backup, and system files
+**/*~
+**/*.tmp
+**/*.bak
+**/*.swp
+**/*.swo
+.DS_Store
+Thumbs.db
+ehthumbs.db
+
+# Ignore environment and config secrets
+.env
+.env.*
+secrets.json
+appsettings.*.local.json
