--- a/E_Commerce/E_Commerce.Server/E_Commerce.Server.csproj
+++ b/E_Commerce/E_Commerce.Server/E_Commerce.Server.csproj
@@ -18,4 +18,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\E_Commerce.Dal\E_Commerce.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
