--- a/E_Commerce/E_Commerce.Server/appsettings.json
+++ b/E_Commerce/E_Commerce.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data Source=localhost\\SQLEXPRESS;User ID=sa;Password=2;Initial Catalog=E_Commerce;TrustServerCertificate=True;"
+  }
 }
