--- a/E_Commerce/E_Commerce.Repository/E_Commerce.Repository.csproj
+++ b/E_Commerce/E_Commerce.Repository/E_Commerce.Repository.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\E_Commerce.Dal\E_Commerce.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
