--- a/E_Commerce/E_Commerce.Bll/E_Commerce.Bll.csproj
+++ b/E_Commerce/E_Commerce.Bll/E_Commerce.Bll.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\E_Commerce.Dal\E_Commerce.Dal.csproj" />
   </ItemGroup>
 
