--- a/E_Commerce/E_Commerce.Server/E_Commerce.Server.csproj
+++ b/E_Commerce/E_Commerce.Server/E_Commerce.Server.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\E_Commerce.Bll\E_Commerce.Bll.csproj" />
     <ProjectReference Include="..\E_Commerce.Dal\E_Commerce.Dal.csproj" />
   </ItemGroup>
 
