--- a/E_Commerce/E_Commerce.Repository/E_Commerce.Repository.csproj
+++ b/E_Commerce/E_Commerce.Repository/E_Commerce.Repository.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\E_Commerce.Dal\E_Commerce.Dal.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\NewFolder\" />
+  </ItemGroup>
+
 </Project>
