--- a/E_Commerce/E_Commerce.Server/E_Commerce.Server.csproj
+++ b/E_Commerce/E_Commerce.Server/E_Commerce.Server.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\E_Commerce.Bll\E_Commerce.Bll.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controller\" />
+  </ItemGroup>
+
 </Project>
