--- a/E_Commerce/E_Commerce.Server/appsettings.json
+++ b/E_Commerce/E_Commerce.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=WIN-BNO54FDBS2G\\SQLEXPRESS;Database=E_Commerce;User Id=sa;Password=1;TrustServerCertificate=True;"
+    "DatabaseConnection": "Data Source=localhost\\SQLEXPRESS;User ID=sa;Password=1;Initial Catalog=E_Commerce;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
